welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: type mismatch;
 found   : String("Fizz")
 required: Int
		rep = "Fizz"
                      ^fizzBuzz:7: error: type mismatch;
 found   : Int
 required: String
		return rep
                       ^fizzBuzz:11: error: type mismatch;
 found   : String("Buzz")
 required: Int
		rep = "Buzz"
                      ^fizzBuzz:12: error: type mismatch;
 found   : Int
 required: String
		return rep
                       ^fizzBuzz:14: error: type mismatch;
 found   : Int
 required: String
return rep
       ^